--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-    name="description"
-    content="Apple web clone using react framework"
-    />
+    <meta name="description" content="Apple web clone using react framework" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,8 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <base href="%PUBLIC_URL%/"> -->
-    <base href="./">
+    <base href="%PUBLIC_URL%/" />
     <title>React Apple Clone</title>
   </head>
   <body>
